# deepwalk

./: .coveragerc  .gitignore  AUTHORS.rst  LICENSE.txt  README.rst  setup.cfg  setup.py
docs/: Makefile  conf.py  index.rst
src/deepwalk/: main.py  model.py  train.py
tests/: conftest.py  test_model.py  test_skeleton.py  test_train.py
